<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MTGMatcher</string>
    <string name="nameEntryHint">Please enter your name</string>
    <string name="nameEntryLabel">Name:</string>
    <string name="dciEntryLabel">DCI Number:</string>
    <string name="dciEntryHint">Please enter your DCI Number</string>
    <string name="updatePlayerDetailsButtonText">Save</string>
    <string name="noPlayServicesWarning">You do not have play services!</string>
</resources>
