<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/playerDetailsDiv">
        <TextView
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:text="@string/nameEntryLabel"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/nameEntryHint"
                android:id="@+id/nameEntry"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:text="@string/dciEntryLabel"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dciEntryHint"
                android:id="@+id/dciEntry"/>
    </LinearLayout>

    <Button
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/updatePlayerDetailsButtonText"
            android:onClick="updatePlayerDetails"
            android:id="@+id/updatePlayerDetails"/>

</LinearLayout>